Added tests for Board + fixes the bugs found